crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__metadata__tests__interface_enum.snap
---
source: crates/wit-compiler/src/queries/metadata.rs
info:
  src: "interface i { enum foo { first, second } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (enum_item name: (identifier) cases: (enum_case name: (identifier)) cases: (enum_case name: (identifier))))))))"
---
[
    Node {
        name: "i",
        type_name: "wit_compiler::queries::metadata::InterfaceMetadata",
        file: "interface_enum.wit",
        range: 0..42,
        children: [
            Node {
                name: "foo",
                type_name: "wit_compiler::queries::metadata::EnumMetadata",
                file: "interface_enum.wit",
                range: 14..40,
                children: [
                    Node {
                        name: "first",
                        type_name: "wit_compiler::queries::metadata::EnumCaseMetadata",
                        file: "interface_enum.wit",
                        range: 25..30,
                        children: [],
                    },
                    Node {
                        name: "second",
                        type_name: "wit_compiler::queries::metadata::EnumCaseMetadata",
                        file: "interface_enum.wit",
                        range: 32..38,
                        children: [],
                    },
                ],
            },
        ],
    },
]
