crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__metadata__tests__interface_resource_with_method.snap
---
source: crates/wit-compiler/src/queries/metadata.rs
info:
  src: "interface i { resource foo { method: func(); } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (resource_item name: (identifier) methods: (resource_method (func_item name: (identifier) ty: (func_type params: (param_list))))))))))"
---
[
    Node {
        name: "i",
        type_name: "wit_compiler::queries::metadata::InterfaceMetadata",
        file: "interface_resource_with_method.wit",
        range: 0..48,
        children: [
            Node {
                name: "foo",
                type_name: "wit_compiler::queries::metadata::TypeDefinitionMetadata",
                file: "interface_resource_with_method.wit",
                range: 14..46,
                children: [
                    Node {
                        name: "method",
                        type_name: "wit_compiler::queries::metadata::MethodMetadata",
                        file: "interface_resource_with_method.wit",
                        range: 29..44,
                        children: [],
                    },
                ],
            },
        ],
    },
]
