crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__metadata__tests__world_with_type_alias.snap
---
source: crates/wit-compiler/src/queries/metadata.rs
info:
  src: "world w { type x = u32; }"
  ast: "(source_file (top_level_item (world_item name: (identifier) items: (world_items (typedef_item (type_item name: (identifier) ty: (ty (builtins))))))))"
---
[
    Node {
        name: "w",
        type_name: "wit_compiler::queries::metadata::WorldMetadata",
        file: "world_with_type_alias.wit",
        range: 0..25,
        children: [
            Node {
                name: "x",
                type_name: "wit_compiler::queries::metadata::TypeAliasMetadata",
                file: "world_with_type_alias.wit",
                range: 10..23,
                children: [],
            },
        ],
    },
]
